--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,23 @@ button {
   cursor: pointer;
 }
 
+h2{
+    margin-top: 0;
+}
+
 button:disabled {
   background-color: #6c757d;
   cursor: not-allowed;
+}
+
+.welcome{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.welcome button{
+    width: 40%;
+    height: 70%;
 }
